--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-ul {
+.links {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
+
 }
 
 section h1 {
@@ -10,11 +10,45 @@ section h1 {
     color: #F9FAF8;
 }
 
-section {
+.section1 {
     background-color: #1f2937;
 }
 
-section span {
+.section1 span {
     font-size: 18px;
     color: #e5e7eb;
+}
+button {
+    color: #f9faf8;
+    background-color: #3882f6;
+}
+.section3 {
+    background-color: #E5E7eb;
+}
+
+
+.section3 span {
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+    color: #1f2937;
+}
+
+.worker-container {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+
+    padding: 0px 24px 96px 24px;
+}
+
+.worker {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    gap: 8px;
+    padding: 24px;
+    color: white;
+    text-shadow: 2px 2px 1px black;
 }
